chore: translate messageKey into corresponding text

--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-details/dp-details.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-details/dp-details.component.html
@@ -62,7 +62,7 @@
                     <ng-container matColumnDef="message">
                         <th mat-header-cell *matHeaderCellDef>Message</th>
                         <td mat-cell *matCellDef="let AuditLog" data-label="Message:">
-                            {{ AuditLog.message }}
+                            {{ replaceMessageKeyWithCorrespondingText(AuditLog.messageKey) }}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="oldStatus">
