--- a/AdminApi/src/AdminApi/ClientApp/src/theme.scss
+++ b/AdminApi/src/AdminApi/ClientApp/src/theme.scss
@@ -17,8 +17,7 @@ $primary-palette: (
     A200: #5d7dff,
     A400: #2a54ff,
     A700: #1040ff,
-    contrast: (
-        50: #000000,
+    contrast: (50: #000000,
         100: #000000,
         200: #000000,
         300: #ffffff,
@@ -31,8 +30,7 @@ $primary-palette: (
         A100: #000000,
         A200: #000000,
         A400: #ffffff,
-        A700: #ffffff
-    )
+        A700: #ffffff)
 );
 
 $accent-palette: (
@@ -50,8 +48,7 @@ $accent-palette: (
     A200: #e37b27,
     A400: #e37b27,
     A700: #e37b27,
-    contrast: (
-        50: #ffffff,
+    contrast: (50: #ffffff,
         100: #ffffff,
         200: #ffffff,
         300: #ffffff,
@@ -64,22 +61,15 @@ $accent-palette: (
         A100: #ffffff,
         A200: #ffffff,
         A400: #ffffff,
-        A700: #ffffff
-    )
+        A700: #ffffff)
 );
 
-$my-primary: mat.define-palette($primary-palette, 500);
-$my-accent: mat.define-palette($accent-palette, 500);
+$my-primary: mat.m2-define-palette($primary-palette, 500);
+$my-accent: mat.m2-define-palette($accent-palette, 500);
 
-$my-theme: mat.define-light-theme(
-    (
-        color: (
-            primary: $my-primary,
-            accent: $my-accent
-        ),
-        typography: mat.define-typography-config(),
-        density: 0
-    )
-);
+$my-theme: mat.m2-define-light-theme((color: (primary: $my-primary,
+                accent: $my-accent ),
+            typography: mat.m2-define-typography-config(),
+            density: 0));
 
 @include mat.all-component-themes($my-theme);
