--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/identity-details.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/identity-details.component.html
@@ -170,6 +170,12 @@
                             {{ Device.createdByDevice }}
                         </td>
                     </ng-container>
+                    <ng-container matColumnDef="communicationLanguage">
+                        <th mat-header-cell *matHeaderCellDef>Communication Language</th>
+                        <td mat-cell *matCellDef="let Device" data-label="Communication Language:">
+                            {{ Device.communicationLanguage }}
+                        </td>
+                    </ng-container>
 
                     <tr mat-header-row *matHeaderRowDef="devicesTableDisplayedColumns"></tr>
                     <tr mat-row *matRowDef="let row; columns: devicesTableDisplayedColumns"></tr>
