--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-list/identity-list.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-list/identity-list.component.html
@@ -7,3 +7,9 @@
         <app-identities-overview></app-identities-overview>
     </mat-card-content>
 </mat-card>
+<br />
+<mat-card>
+    <mat-card-content>
+        <app-dp-audit-logs></app-dp-audit-logs>
+    </mat-card-content>
+</mat-card>
