--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
@@ -1,7 +1,7 @@
 <div class="card-header">
     <h2 class="header-title">{{ header }}</h2>
 </div>
-<div [ngClass]="{ 'disabled-container': loading }" *ngIf="identityDeletionProcess">
+<div [ngClass]="{ 'disabled-container': loading }" *ngIf="identityDeletionProcessAuditLogs.length">
     <mat-card>
         <mat-card-content class="form-card">
             <div *ngIf="loading" class="loading">
@@ -31,8 +31,8 @@
                     {{ headerDeletionProcessAuditLogDescription }}
                 </mat-panel-description>
             </mat-expansion-panel-header>
-            <ng-template matExpansionPanelContent *ngIf="identityDeletionProcess.auditLog">
-                <table mat-table class="responsive" [dataSource]="identityDeletionProcessAuditLogs!">
+            <ng-template matExpansionPanelContent *ngIf="identityDeletionProcessAuditLogs">
+                <table mat-table class="responsive" [dataSource]="identityDeletionProcessAuditLogs">
                     <ng-container matColumnDef="id">
                         <th mat-header-cell *matHeaderCellDef>ID</th>
                         <td mat-cell *matCellDef="let AuditLog" data-label="ID:">
