fix: the header title and remove expansion panel

--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.css
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.css
@@ -13,6 +13,11 @@
     justify-content: flex-end;
 }
 
+.header-description {
+    color: #fff;
+}
+
+
 .action-buttons button {
     margin: 10px;
 }
