--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
@@ -2,7 +2,7 @@
     <h2 class="header-title">{{ headerDeletionProcessAuditLog }}</h2>
     <p class="header-description">{{ headerDeletionProcessAuditLogDescription }}</p>
 </div>
-<div [ngClass]="{ 'disabled-container': loading }" *ngIf="identityDeletionProcessAuditLogs.length">
+<div [ngClass]="{ 'disabled-container': loading }">
     <mat-card>
         <mat-card-content class="form-card">
             <div *ngIf="loading" class="loading">
