feat: add support for data deleted

--- a/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
+++ b/AdminApi/src/AdminApi/ClientApp/src/app/components/identity/identity-details/deletion-processes/dp-audit-logs/dp-audit-logs-details/dp-audit-logs-details/dp-audit-logs-details.component.html
@@ -35,7 +35,7 @@
                     <ng-container matColumnDef="message">
                         <th mat-header-cell *matHeaderCellDef>Message</th>
                         <td mat-cell *matCellDef="let AuditLog" data-label="Message:">
-                            {{ replaceMessageKeyWithCorrespondingText(AuditLog.messageKey) }}
+                            {{ getFormattedMessage(AuditLog.messageKey, AuditLog.additionalData) }}
                         </td>
                     </ng-container>
                     <ng-container matColumnDef="oldStatus">
